2005-10-26  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Update with results for new tests.
	* maps/*2.c: Tests for the new API.
	* maps/ist.c: Renamed isx.c.
	* maps/setadd.c: New test of adding and setting.

2005-09-23  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Add sort results.
	* maps/sort.c: New test.

2005-09-14  Martin Hunt  <hunt@redhat.com>

	* maps/ii.c (main): Add test for _stp_map_clear().
	* maps/map.test: Update results.

2005-09-12  Martin Hunt  <hunt@redhat.com>

	* math/div64.c (main): Set the expected result for LLONG_MIN/-1 to 
	be LLONG_MIN (overflow) instead of 0.

2005-09-09  Martin Hunt  <hunt@redhat.com>

	* math/div64.c (main): Fixes for running on 64-bit hardware.

	* README: Update.
	* math/div64.c: New file. 64-bit division tests.
