@@ -1,5 +1,9 @@
 2005-10-26  Martin Hunt  <hunt@redhat.com>
 
+	* maps/map.test: Add results for issii2.
+
+2005-10-26  Martin Hunt  <hunt@redhat.com>
+
 	* maps/map.test: Update with results for new tests.
 	* maps/*2.c: Tests for the new API.
 	* maps/ist.c: Renamed isx.c.
